<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Postage Calculator</string>
    <string name="package_type">Package Type:</string>
    <string name="package_weight">Weight:</string>
    <string name="action_settings">Settings</string>
    <string name="let">Letter</string>
    <string name="env">Envelope</string>
    <string name="pkg">Package</string>
    <string name="oz">oz</string>
    <string name="hint">0 - 13 oz</string>
    <string name="button_text">Calculate</string>
    <string name="postage_total">Postage Total:</string>
    <string name="title_activity_show_info">Rules and Regulations</string>

</resources>
