<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="edu.pitt.cs1635.zll1.prog1.MainActivity$PlaceholderFragment">

    <TextView
        android:text="@string/package_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:textSize="25sp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">
        <RadioButton
            android:id="@+id/radio_let"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let"
            android:onClick="checkEnable"
            android:padding="5sp"/>
        <RadioButton
            android:id="@+id/radio_env"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/env"
            android:onClick="checkEnable"
            android:padding="5sp"/>
        <RadioButton
            android:id="@+id/radio_pkg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pkg"
            android:onClick="checkEnable"
            android:padding="5sp"/>
    </RadioGroup>

    <TextView
        android:text="@string/package_weight"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editText_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint"
            android:inputType="numberDecimal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oz"/>
        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:onClick="calculatePostage"
            android:enabled="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Info"
            android:onClick="showInfo"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/postage_total"
        android:textSize="20sp"
        android:padding="5sp"/>

    <TextView
        android:id="@+id/postage"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="50sp"
        android:paddingTop="10sp"/>



</LinearLayout>